# aoc22

./: Cargo.toml  README.md
src/: day1.rs  day2.rs  day3.rs  main.rs
