[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
duplicate = "0.4.1"
itertools = "0.10.5"
nom = "7.1.1"
once_cell = "1.16.0"
stable-eyre = "0.2.2"
strum = { version = "0.24.1", features = ["derive"] }
